--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,11 @@ dependencies:
   http: ^0.13.3
   web3dart: ^2.2.0
   web_socket_channel: ^2.1.0
-
+  firebase_auth: ^1.1.1
+  firebase_core: ^1.0.4
+  cloud_firestore: ^1.0.6
+  shared_preferences: ^2.0.6
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -49,8 +53,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
+    - src/abis/Election.json
+    - src/abis/Migrations.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
