--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   firebase_core: ^1.0.4
   cloud_firestore: ^1.0.6
   shared_preferences: ^2.0.6
+  camera: ^0.8.1
+  path_provider: ^2.0.1
+  firebase_storage: ^8.0.3
+  image_picker: ^0.8.3+3
   
 dev_dependencies:
   flutter_test:
